add database migrastion, event, client, revp

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,4 +1,3 @@
-@import './template/dist/plugins/global/plugins.bundle.css';
-@import './template/dist/assets/css/style.bundle.css';
-@import './base.css';
-
+@import 'src/assets/plugins.bundle.css';
+@import 'src/assets/style.bundle.css';
+@import 'src/assets/base.css';
